...
    android:id="@+id/Delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeletePhoto">

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="119dp"
        android:layout_height="77dp"
        android:onClick="onClick"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <EditText
        android:id="@+id/deleteNameText"
        android:layout_width="223dp"
        android:layout_height="68dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:hint="Name of the picture to be deleted"
...
